only allow the new pass through policy for windows

for unices (X11) this seems to cause issues

BUG: 416078